# flux_api_comfyui_plugin

./: .gitignore  1_15_expression_w_poses_flow.json  LICENSE  README.md  RESTART_INSTRUCTIONS.md  __init__.py  eigenai_modular_workflow_example.json  node_list.json  pyproject.toml  requirements.txt  test_fix.py  test_plugin.py
nodes/: __init__.py  eigenai_flux_generator_node.py  eigenai_flux_kontext_node.py  eigenai_flux_lora_node.py  eigenai_flux_node.py  eigenai_flux_qwen_node.py  eigenai_flux_text_node.py  eigenai_kontext_generator_node.py  eigenai_kontext_node.py  eigenai_lora_node.py  eigenai_qwen_generator_node.py  eigenai_qwen_node.py  eigenai_schnell_generator_node.py  eigenai_schnell_node.py  eigenai_text_node.py  eigenai_upscaler_node.py  flux_api_node.py  kontext_api_node.py  qwen_api_node.py
