[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eigen-ai-flux-api-plugin"
version = "1.0.0"
description = "Eigen AI FLUX API integration for ComfyUI with LoRA support and large font prompt inputs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Eigen AI", email = "contact@eigenai.com"}
]
keywords = ["comfyui", "flux", "ai", "image-generation", "lora", "eigen-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "pillow>=8.0.0",
    "numpy>=1.19.0",
    "torch>=1.8.0",
    "colorama>=0.4.4",
]

[project.urls]
Homepage = "https://github.com/eigenai/flux_api_plugin"
Repository = "https://github.com/eigenai/flux_api_plugin"
Issues = "https://github.com/eigenai/flux_api_plugin/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.json", "*.md", "*.css"]
